@@ -11,9 +11,11 @@ python config_unix.py
 python setup.py build
 [as root] python setup.py install
 
-The config script is new and still pretty weak. If you have any
-problems let me know. Access the module by using "import ao" in your
-Python code.
+Use the config_unix.py script to configure the build first. You can
+pass a --prefix argument to tell the script where you have the ao
+files installed. If you have problems, check the file config.log for
+specifics. If you have any problems let me know. Access the module by
+using "import ao" in your Python code.
 
 Here's an interactive session of just playing with the module, until I
 create better documentation (there should be docstrings for
@@ -22,22 +24,20 @@ file.
 
 >>> import ao
 
->>> myoptions = {'file': 'myoutput.wav'}
-
->>> dev = ao.AudioDevice('wav', options = myoptions)
+>>> dev = ao.AudioDevice('wav', filename = 'myoutput.wav')
 
 >>> f = open('/dev/urandom', 'r') #that's some good stuff
 
 >>> print dev
 <AudioDevice object at 0x812ac28>
 
->>> print dev.get_driver_info()
+>>> print dev.driver_info()
 {'author': 'Aaron Holtzman <aholtzma@ess.engr.uvic.ca>', 
  'short_name': 'wav', 
  'name': 'WAV file output', 
  'comment': 'Sends output to a .wav file'}
 
->>> print ao.get_driver_info('oss')
+>>> print ao.driver_info('oss')
 {'author': 'Aaron Holtzman <aholtzma@ess.engr.uvic.ca>', 
  'short_name': 'oss', 
  'name': 'OSS audio driver output ', 
@@ -50,6 +50,13 @@ file.
 >>> <control-d>
 
 And now I have a file myoutput.wav with random noise in it.
+
+A note: Because of the way the AO API works, if you are opening a
+device that outputs to a file (like raw or wav), then you HAVE to pass
+the filename as a keyword parameter to the constructor (like
+above). It can't just be an option (you used to be able to do
+that). Opening a "live" device (e.g. oss or alsa), you obviously don't
+have to worry about the filename.
 
 
 Andrew Chatham <andrew.chatham@duke.edu>
