@@ -1,3 +1,13 @@
+2001-12-09  Andrew H. Chatham <andrew.chatham@duke.edu>
+	* README: Updated to document the "filename" keyword
+	
+	* config_unix.py: Updated to do logging.
+	
+2001-11-25  Andrew H. Chatham <andrew.chatham@duke.edu>
+	* README: Updated to match the new API. I forgot.
+
+	* src/aomodule.c: Changed get_driver_info as a method to driver_info
+
 2001-09-02  Andrew H. Chatham <andrew.chatham@duke.edu>
 	* setup.py: Bumped version number to 0.8 to match libao
 
